Protect against public classes with non-public constructors.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@910101 13f79535-47bb-0310-9956-ffa450edef68